libqt6c/src/libqmetaobject.hpp

typedef struct QMetaClassInfo QMetaClassInfo;
typedef struct QMetaEnum QMetaEnum;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMetaProperty QMetaProperty;
typedef struct QMetaType QMetaType;
typedef struct QObject QObject;
typedef struct QUntypedBindable QUntypedBindable;
typedef struct QVariant QVariant;
int QMetaMethod_Access(const QMetaMethod* self);
int QMetaMethod_MethodType(const QMetaMethod* self);
int QMetaMethod_Attributes(const QMetaMethod* self);
QMetaProperty* QMetaProperty_new(const QMetaProperty* other);
QMetaProperty* QMetaProperty_new2(QMetaProperty* other);
QMetaProperty* QMetaProperty_new3();
const char* QMetaProperty_Name(const QMetaProperty* self);
const char* QMetaProperty_TypeName(const QMetaProperty* self);
int QMetaProperty_Type(const QMetaProperty* self);
int QMetaProperty_UserType(const QMetaProperty* self);
int QMetaProperty_TypeId(const QMetaProperty* self);
QMetaType* QMetaProperty_MetaType(const QMetaProperty* self);
int QMetaProperty_PropertyIndex(const QMetaProperty* self);
int QMetaProperty_RelativePropertyIndex(const QMetaProperty* self);
bool QMetaProperty_IsReadable(const QMetaProperty* self);
bool QMetaProperty_IsWritable(const QMetaProperty* self);
bool QMetaProperty_IsResettable(const QMetaProperty* self);
bool QMetaProperty_IsDesignable(const QMetaProperty* self);
bool QMetaProperty_IsScriptable(const QMetaProperty* self);
bool QMetaProperty_IsStored(const QMetaProperty* self);
bool QMetaProperty_IsUser(const QMetaProperty* self);
bool QMetaProperty_IsConstant(const QMetaProperty* self);
bool QMetaProperty_IsFinal(const QMetaProperty* self);
bool QMetaProperty_IsRequired(const QMetaProperty* self);
bool QMetaProperty_IsBindable(const QMetaProperty* self);
bool QMetaProperty_IsFlagType(const QMetaProperty* self);
bool QMetaProperty_IsEnumType(const QMetaProperty* self);
QMetaEnum* QMetaProperty_Enumerator(const QMetaProperty* self);
bool QMetaProperty_HasNotifySignal(const QMetaProperty* self);
QMetaMethod* QMetaProperty_NotifySignal(const QMetaProperty* self);
int QMetaProperty_NotifySignalIndex(const QMetaProperty* self);
int QMetaProperty_Revision(const QMetaProperty* self);
QVariant* QMetaProperty_Read(const QMetaProperty* self, const QObject* obj);
bool QMetaProperty_Write(const QMetaProperty* self, QObject* obj, const QVariant* value);
bool QMetaProperty_Reset(const QMetaProperty* self, QObject* obj);
QUntypedBindable* QMetaProperty_Bindable(const QMetaProperty* self, QObject* object);
QVariant* QMetaProperty_ReadOnGadget(const QMetaProperty* self, const void* gadget);
bool QMetaProperty_WriteOnGadget(const QMetaProperty* self, void* gadget, const QVariant* value);
bool QMetaProperty_ResetOnGadget(const QMetaProperty* self, void* gadget);
bool QMetaProperty_HasStdCppSet(const QMetaProperty* self);
bool QMetaProperty_IsAlias(const QMetaProperty* self);
bool QMetaProperty_IsValid(const QMetaProperty* self);
QMetaObject* QMetaProperty_EnclosingMetaObject(const QMetaProperty* self);
void QMetaProperty_Delete(QMetaProperty* self);
QMetaClassInfo* QMetaClassInfo_new(const QMetaClassInfo* other);
QMetaClassInfo* QMetaClassInfo_new2(QMetaClassInfo* other);
QMetaClassInfo* QMetaClassInfo_new3();
const char* QMetaClassInfo_Name(const QMetaClassInfo* self);
const char* QMetaClassInfo_Value(const QMetaClassInfo* self);
QMetaObject* QMetaClassInfo_EnclosingMetaObject(const QMetaClassInfo* self);
void QMetaClassInfo_Delete(QMetaClassInfo* self);