QtBeef/src/Qt/qmetaobject.bf

extension CQt
{
	[LinkName("QMetaProperty_new")]
	public static extern QMetaProperty_Ptr QMetaProperty_new(void** other);
	[LinkName("QMetaProperty_new2")]
	public static extern QMetaProperty_Ptr QMetaProperty_new2(void** other);
	[LinkName("QMetaProperty_new3")]
	public static extern QMetaProperty_Ptr QMetaProperty_new3();
	[LinkName("QMetaProperty_Delete")]
	public static extern void QMetaProperty_Delete(QMetaProperty_Ptr self);
	[LinkName("QMetaProperty_Name")]
	public static extern c_char* QMetaProperty_Name(void* self);
	[LinkName("QMetaProperty_TypeName")]
	public static extern c_char* QMetaProperty_TypeName(void* self);
	[LinkName("QMetaProperty_Type")]
	public static extern QVariant_Type QMetaProperty_Type(void* self);
	[LinkName("QMetaProperty_UserType")]
	public static extern c_int QMetaProperty_UserType(void* self);
	[LinkName("QMetaProperty_TypeId")]
	public static extern c_int QMetaProperty_TypeId(void* self);
	[LinkName("QMetaProperty_MetaType")]
	public static extern void* QMetaProperty_MetaType(void* self);
	[LinkName("QMetaProperty_PropertyIndex")]
	public static extern c_int QMetaProperty_PropertyIndex(void* self);
	[LinkName("QMetaProperty_RelativePropertyIndex")]
	public static extern c_int QMetaProperty_RelativePropertyIndex(void* self);
	[LinkName("QMetaProperty_IsReadable")]
	public static extern bool QMetaProperty_IsReadable(void* self);
	[LinkName("QMetaProperty_IsWritable")]
	public static extern bool QMetaProperty_IsWritable(void* self);
	[LinkName("QMetaProperty_IsResettable")]
	public static extern bool QMetaProperty_IsResettable(void* self);
	[LinkName("QMetaProperty_IsDesignable")]
	public static extern bool QMetaProperty_IsDesignable(void* self);
	[LinkName("QMetaProperty_IsScriptable")]
	public static extern bool QMetaProperty_IsScriptable(void* self);
	[LinkName("QMetaProperty_IsStored")]
	public static extern bool QMetaProperty_IsStored(void* self);
	[LinkName("QMetaProperty_IsUser")]
	public static extern bool QMetaProperty_IsUser(void* self);
	[LinkName("QMetaProperty_IsConstant")]
	public static extern bool QMetaProperty_IsConstant(void* self);
	[LinkName("QMetaProperty_IsFinal")]
	public static extern bool QMetaProperty_IsFinal(void* self);
	[LinkName("QMetaProperty_IsRequired")]
	public static extern bool QMetaProperty_IsRequired(void* self);
	[LinkName("QMetaProperty_IsBindable")]
	public static extern bool QMetaProperty_IsBindable(void* self);
	[LinkName("QMetaProperty_IsFlagType")]
	public static extern bool QMetaProperty_IsFlagType(void* self);
	[LinkName("QMetaProperty_IsEnumType")]
	public static extern bool QMetaProperty_IsEnumType(void* self);
	[LinkName("QMetaProperty_Enumerator")]
	public static extern void* QMetaProperty_Enumerator(void* self);
	[LinkName("QMetaProperty_HasNotifySignal")]
	public static extern bool QMetaProperty_HasNotifySignal(void* self);
	[LinkName("QMetaProperty_NotifySignal")]
	public static extern void* QMetaProperty_NotifySignal(void* self);
	[LinkName("QMetaProperty_NotifySignalIndex")]
	public static extern c_int QMetaProperty_NotifySignalIndex(void* self);
	[LinkName("QMetaProperty_Revision")]
	public static extern c_int QMetaProperty_Revision(void* self);
	[LinkName("QMetaProperty_Read")]
	public static extern void* QMetaProperty_Read(void* self, void** obj);
	[LinkName("QMetaProperty_Write")]
	public static extern bool QMetaProperty_Write(void* self, void** obj, void** value);
	[LinkName("QMetaProperty_Reset")]
	public static extern bool QMetaProperty_Reset(void* self, void** obj);
	[LinkName("QMetaProperty_Bindable")]
	public static extern void* QMetaProperty_Bindable(void* self, void** object);
	[LinkName("QMetaProperty_ReadOnGadget")]
	public static extern void* QMetaProperty_ReadOnGadget(void* self, void* gadget);
	[LinkName("QMetaProperty_WriteOnGadget")]
	public static extern bool QMetaProperty_WriteOnGadget(void* self, void* gadget, void** value);
	[LinkName("QMetaProperty_ResetOnGadget")]
	public static extern bool QMetaProperty_ResetOnGadget(void* self, void* gadget);
	[LinkName("QMetaProperty_HasStdCppSet")]
	public static extern bool QMetaProperty_HasStdCppSet(void* self);
	[LinkName("QMetaProperty_IsAlias")]
	public static extern bool QMetaProperty_IsAlias(void* self);
	[LinkName("QMetaProperty_IsValid")]
	public static extern bool QMetaProperty_IsValid(void* self);
	[LinkName("QMetaProperty_EnclosingMetaObject")]
	public static extern void** QMetaProperty_EnclosingMetaObject(void* self);
}
class QMetaProperty : IQMetaProperty
{
	private QMetaProperty_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QMetaProperty_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this(IQMetaProperty other)
	{
		this.ptr = CQt.QMetaProperty_new((.)other?.ObjectPtr);
	}
	public this()
	{
		this.ptr = CQt.QMetaProperty_new3();
	}
	public ~this()
	{
		CQt.QMetaProperty_Delete(this.ptr);
	}
	public c_char* Name()
	{
		return CQt.QMetaProperty_Name((.)this.ptr.Ptr);
	}
	public c_char* TypeName()
	{
		return CQt.QMetaProperty_TypeName((.)this.ptr.Ptr);
	}
	public QVariant_Type Type()
	{
		return CQt.QMetaProperty_Type((.)this.ptr.Ptr);
	}
	public c_int UserType()
	{
		return CQt.QMetaProperty_UserType((.)this.ptr.Ptr);
	}
	public c_int TypeId()
	{
		return CQt.QMetaProperty_TypeId((.)this.ptr.Ptr);
	}
	public QMetaType_Ptr MetaType()
	{
		return QMetaType_Ptr(CQt.QMetaProperty_MetaType((.)this.ptr.Ptr));
	}
	public c_int PropertyIndex()
	{
		return CQt.QMetaProperty_PropertyIndex((.)this.ptr.Ptr);
	}
	public c_int RelativePropertyIndex()
	{
		return CQt.QMetaProperty_RelativePropertyIndex((.)this.ptr.Ptr);
	}
	public bool IsReadable()
	{
		return CQt.QMetaProperty_IsReadable((.)this.ptr.Ptr);
	}
	public bool IsWritable()
	{
		return CQt.QMetaProperty_IsWritable((.)this.ptr.Ptr);
	}
	public bool IsResettable()
	{
		return CQt.QMetaProperty_IsResettable((.)this.ptr.Ptr);
	}
	public bool IsDesignable()
	{
		return CQt.QMetaProperty_IsDesignable((.)this.ptr.Ptr);
	}
	public bool IsScriptable()
	{
		return CQt.QMetaProperty_IsScriptable((.)this.ptr.Ptr);
	}
	public bool IsStored()
	{
		return CQt.QMetaProperty_IsStored((.)this.ptr.Ptr);
	}
	public bool IsUser()
	{
		return CQt.QMetaProperty_IsUser((.)this.ptr.Ptr);
	}
	public bool IsConstant()
	{
		return CQt.QMetaProperty_IsConstant((.)this.ptr.Ptr);
	}
	public bool IsFinal()
	{
		return CQt.QMetaProperty_IsFinal((.)this.ptr.Ptr);
	}
	public bool IsRequired()
	{
		return CQt.QMetaProperty_IsRequired((.)this.ptr.Ptr);
	}
	public bool IsBindable()
	{
		return CQt.QMetaProperty_IsBindable((.)this.ptr.Ptr);
	}
	public bool IsFlagType()
	{
		return CQt.QMetaProperty_IsFlagType((.)this.ptr.Ptr);
	}
	public bool IsEnumType()
	{
		return CQt.QMetaProperty_IsEnumType((.)this.ptr.Ptr);
	}
	public QMetaEnum_Ptr Enumerator()
	{
		return QMetaEnum_Ptr(CQt.QMetaProperty_Enumerator((.)this.ptr.Ptr));
	}
	public bool HasNotifySignal()
	{
		return CQt.QMetaProperty_HasNotifySignal((.)this.ptr.Ptr);
	}
	public QMetaMethod_Ptr NotifySignal()
	{
		return QMetaMethod_Ptr(CQt.QMetaProperty_NotifySignal((.)this.ptr.Ptr));
	}
	public c_int NotifySignalIndex()
	{
		return CQt.QMetaProperty_NotifySignalIndex((.)this.ptr.Ptr);
	}
	public c_int Revision()
	{
		return CQt.QMetaProperty_Revision((.)this.ptr.Ptr);
	}
	public QVariant_Ptr Read(IQObject obj)
	{
		return QVariant_Ptr(CQt.QMetaProperty_Read((.)this.ptr.Ptr, (.)obj?.ObjectPtr));
	}
	public bool Write(IQObject obj, IQVariant value)
	{
		return CQt.QMetaProperty_Write((.)this.ptr.Ptr, (.)obj?.ObjectPtr, (.)value?.ObjectPtr);
	}
	public bool Reset(IQObject obj)
	{
		return CQt.QMetaProperty_Reset((.)this.ptr.Ptr, (.)obj?.ObjectPtr);
	}
	public QUntypedBindable_Ptr Bindable(IQObject object)
	{
		return QUntypedBindable_Ptr(CQt.QMetaProperty_Bindable((.)this.ptr.Ptr, (.)object?.ObjectPtr));
	}
	public QVariant_Ptr ReadOnGadget(void* gadget)
	{
		return QVariant_Ptr(CQt.QMetaProperty_ReadOnGadget((.)this.ptr.Ptr, gadget));
	}
	public bool WriteOnGadget(void* gadget, IQVariant value)
	{
		return CQt.QMetaProperty_WriteOnGadget((.)this.ptr.Ptr, gadget, (.)value?.ObjectPtr);
	}
	public bool ResetOnGadget(void* gadget)
	{
		return CQt.QMetaProperty_ResetOnGadget((.)this.ptr.Ptr, gadget);
	}
	public bool HasStdCppSet()
	{
		return CQt.QMetaProperty_HasStdCppSet((.)this.ptr.Ptr);
	}
	public bool IsAlias()
	{
		return CQt.QMetaProperty_IsAlias((.)this.ptr.Ptr);
	}
	public bool IsValid()
	{
		return CQt.QMetaProperty_IsValid((.)this.ptr.Ptr);
	}
	public QMetaObject_Ptr EnclosingMetaObject()
	{
		return QMetaObject_Ptr(CQt.QMetaProperty_EnclosingMetaObject((.)this.ptr.Ptr));
	}
}
interface IQMetaProperty : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QMetaClassInfo
// --------------------------------------------------------------
[CRepr]
struct QMetaClassInfo_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QMetaClassInfo_new")]
	public static extern QMetaClassInfo_Ptr QMetaClassInfo_new(void** other);
	[LinkName("QMetaClassInfo_new2")]
	public static extern QMetaClassInfo_Ptr QMetaClassInfo_new2(void** other);
	[LinkName("QMetaClassInfo_new3")]
	public static extern QMetaClassInfo_Ptr QMetaClassInfo_new3();
	[LinkName("QMetaClassInfo_Delete")]
	public static extern void QMetaClassInfo_Delete(QMetaClassInfo_Ptr self);
	[LinkName("QMetaClassInfo_Name")]
	public static extern c_char* QMetaClassInfo_Name(void* self);
	[LinkName("QMetaClassInfo_Value")]
	public static extern c_char* QMetaClassInfo_Value(void* self);
	[LinkName("QMetaClassInfo_EnclosingMetaObject")]
	public static extern void** QMetaClassInfo_EnclosingMetaObject(void* self);
}
class QMetaClassInfo : IQMetaClassInfo
{
	private QMetaClassInfo_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QMetaClassInfo_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this(IQMetaClassInfo other)
	{
		this.ptr = CQt.QMetaClassInfo_new((.)other?.ObjectPtr);
	}
	public this()
	{
		this.ptr = CQt.QMetaClassInfo_new3();
	}
	public ~this()
	{
		CQt.QMetaClassInfo_Delete(this.ptr);
	}
	public c_char* Name()
	{
		return CQt.QMetaClassInfo_Name((.)this.ptr.Ptr);
	}
	public c_char* Value()
	{
		return CQt.QMetaClassInfo_Value((.)this.ptr.Ptr);
	}
	public QMetaObject_Ptr EnclosingMetaObject()
	{
		return QMetaObject_Ptr(CQt.QMetaClassInfo_EnclosingMetaObject((.)this.ptr.Ptr));
	}
}
interface IQMetaClassInfo : IQtObjectInterface
{
}
[AllowDuplicates]
enum QMetaMethod_Access
{
	Private = 0,
	Protected = 1,
	Public = 2,
}
[AllowDuplicates]
enum QMetaMethod_MethodType
{
	Method = 0,
	Signal = 1,
	Slot = 2,
	Constructor = 3,
}
[AllowDuplicates]
enum QMetaMethod_Attributes
{
	Compatibility = 1,
	Cloned = 2,
	Scriptable = 4,
}